[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/font_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font/font_128.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/main_menu/main_menu.gd" type="Script" id=4]

[node name="MainMenu" type="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 1 )
custom_constants/margin_right = 48
custom_constants/margin_top = 48
custom_constants/margin_left = 48
custom_constants/margin_bottom = 48
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 1232.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="VBoxContainer"]
margin_right = 1184.0
margin_bottom = 174.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "lines."
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 1184.0
margin_bottom = 624.0
custom_constants/separation = 32

[node name="PlayContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 1184.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer/PlayContainer"]
margin_right = 1184.0
margin_bottom = 39.0
theme = ExtResource( 1 )
text = "continue"
align = 0

[node name="ChapterAndLevelTitles" type="Label" parent="VBoxContainer/VBoxContainer/PlayContainer"]
self_modulate = Color( 1, 1, 1, 0.38 )
margin_top = 43.0
margin_right = 1184.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
text = "Chapter 1, task 2"

[node name="Levels" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 1184.0
margin_bottom = 134.0
theme = ExtResource( 1 )
text = "levels"
align = 0

[node name="Challanges" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 1184.0
margin_bottom = 205.0
theme = ExtResource( 1 )
disabled = true
text = "challanges"
align = 0

[node name="Themes" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 1184.0
margin_bottom = 276.0
theme = ExtResource( 1 )
text = "themes"
align = 0

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 1184.0
margin_bottom = 347.0
theme = ExtResource( 1 )
text = "settings"
align = 0

[node name="QuitDesktop" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 379.0
margin_right = 1184.0
margin_bottom = 418.0
theme = ExtResource( 1 )
text = "quit"
align = 0

[connection signal="pressed" from="VBoxContainer/VBoxContainer/PlayContainer/Play" to="." method="_on_continue"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Levels" to="." method="_on_levels"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Themes" to="." method="_on_themes"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitDesktop" to="." method="_on_quit"]
